# PaRMAT

./: CMakeLists.txt  generate-mtx.sh  generate-rmat.sh
src/: ToMtx.cpp
